--- a/customer.html
+++ b/customer.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="container tiffindelivery_card">
-  <form action="insert_tiffin_delivery_agent.php" method="post">
+  <form action="insert_tiffin_delivery_agent.html" method="post">
     <form>
       <div class="container">
         <div class="row">
