--- a/customer_options.html
+++ b/customer_options.html
@@ -24,7 +24,7 @@
   <!--Navbar starts-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
-      <a class="navbar-brand" href="dabewallah.php"><img class="home" src="home.png"></a>
+      <a class="navbar-brand" href="index.html"><img class="home" src="home.png"></a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
