--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="container login_card">
-    <form action="insert_login.php" method="post">
+    <form action="insert_login.html" method="post">
       <form>
         <div class="container">
           <div class="row">
