--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
             <input class="Remember" type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Remember me</label>
           </div>
-          <a  href="customer_options.php">Login</a>
+          <a  href="customer_options.html">Login</a>
           </div>
           <div class="col-2">
           </div>
