--- a/tiffin_delivery_agent.html
+++ b/tiffin_delivery_agent.html
@@ -92,7 +92,7 @@
                 </p>
               </div>
               <div>
-                <a class="login-redirect" href="login.php">Already registered? Login</a>
+                <a class="login-redirect" href="login.html">Already registered? Login</a>
               </div>
               <button class="Login" type="submit" class="btn btn-primary">Sign up</button>
             </div>
