--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </li>
         </ul>
         <form class="d-flex">
-          <a href="login.php" class="btn btn-login" type="submit">Login</a>
+          <a href="login.html" class="btn btn-login" type="submit">Login</a>
         </form>
       </div>
     </div>
@@ -88,7 +88,7 @@
             <div class="card-body">
               <h5 class="card-title">Tiffin customer</h5>
               <p class="card-text">People interested to try out our tiffin delivery can give their details here.</p>
-              <a href="customer.php" class=" btn btn-card1">Sign up</a>
+              <a href="customer.html" class=" btn btn-card1">Sign up</a>
             </div>
           </div>
         </div>
@@ -98,7 +98,7 @@
             <div class="card-body">
               <h5 class="card-title">Dabewallah</h5>
               <p class="card-text">Dabewallahs interested in joining our organization can fill their details here.</p>
-              <a href="tiffin_delivery_agent.php" class="btn btn-card2">Sign up</a>
+              <a href="tiffin_delivery_agent.html" class="btn btn-card2">Sign up</a>
             </div>
           </div>
         </div>
