--- a/index.html
+++ b/index.html
@@ -117,5 +117,49 @@
   </div>
   <!--Footer ends-->
 </body>
+  /* CSS for mobile devices */
+@media (max-width: 767px) {
+  /* Navbar */
+  .navbar-nav {
+    flex-direction: column;
+  }
+  .navbar-toggler-icon {
+    display: block;
+  }
+  .nav-link {
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  /* Main container */
+  .container {
+    padding: 0;
+  }
+  .row {
+    flex-direction: column;
+  }
+  
+  /* About us section */
+  .Main_logo2 {
+    margin-top: 0;
+  }
+  
+  /* Service options section */
+  .card {
+    margin: 20px 0;
+  }
+  
+  /* Footer */
+  .google_developer,
+  .linkedin,
+  .github {
+    display: block;
+    margin: 10px auto;
+  }
+  .text-center,
+  .Endline {
+    text-align: center;
+  }
+}
 
 </html>
