--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container p-3">
       <div class="row">
         <div class="col-4">
-          <img src="Main_Logo2.png" class="Main_logo2" style="margin-top: -100px;">
+          <img src="Main_logo2.png" class="Main_logo2" style="margin-top: -100px;">
         </div>
         <div class="col-8">
           <p class="about-text mt-2">This webapp was developed with the intention of providing a stable employment to
