--- a/index.html
+++ b/index.html
@@ -77,34 +77,36 @@
   <!--About-us ends-->
 
   <!--Login options start-->
-  <div class="container-fluid p-1 servicepage" style="margin-top:100px;" id="our-service">
+ <div class="container-fluid p-1 servicepage" style="margin-top:100px;" id="our-service">
     <h1 class="text-center font-our-services text-dark mt-1">Our services</h1>
     <div class="container">
-      <div class="row">
-        <div class="col-1"></div>
-        <div class="col-6 p-3">
-          <div class="card ml-n3" style="width: 25rem;margin-left: 114px;">
-            <img src="card-1.png" class="card-img-top" height=290 alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Tiffin customer</h5>
-              <p class="card-text">People interested to try out our tiffin delivery can give their details here.</p>
-              <a href="customer.html" class=" btn btn-card1">Sign up</a>
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-5 p-3">
+                <div class="card ml-n3" style="width: 25rem;">
+                    <img src="card-1.png" class="card-img-top" height="290" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tiffin customer</h5>
+                        <p class="card-text">People interested in trying out our tiffin delivery can provide their details here.</p>
+                        <a href="customer.html" class="btn btn-card1">Sign up</a>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col-3 p-3">
-          <div class="card" style="width: 25rem;margin-left: -95px;">
-            <img src="card-2.jpg" class="card-img-top" height=290 alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Dabewallah</h5>
-              <p class="card-text">Dabewallahs interested in joining our organization can fill their details here.</p>
-              <a href="tiffin_delivery_agent.html" class="btn btn-card2">Sign up</a>
+            <div class="col-5 p-3">
+                <div class="card" style="width: 25rem;">
+                    <img src="card-2.jpg" class="card-img-top" height="290" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Dabewallah</h5>
+                        <p class="card-text">Dabewallahs interested in joining our organization can fill out their details here.</p>
+                        <a href="tiffin_delivery_agent.html" class="btn btn-card2">Sign up</a>
+                    </div>
+                </div>
             </div>
-          </div>
+            <div class="col-1"></div>
         </div>
-      </div>
     </div>
-  </div>
+</div>
+
   <!--Login options end-->
 
   <!--Footer start-->
