--- a/index.html
+++ b/index.html
@@ -110,13 +110,15 @@
   <!--Login options end-->
 
   <!--Footer start-->
-  <div class="container-fluid footer p-5 mt-4" id="contact-us">
-  <a href="https://developers.google.com/profile/u/TheOnlySoham/dashboard"><img src="google_developer.png" class="google_developer" ></a>
-    <a class="fa fa-linkedin-square linkedin" href="https://www.linkedin.com/in/soham-thodge-515676229/" style="font-size:36px;color:white"></a>
-    <a href="https://github.com/kronos2003"><img src="github-mark-white.png" class="github"></a>
-    <p class="text-center">&copy;Developed and designed by Soham Thodge</p>
-    <p class="Endline">Made for achieving no poverty and hunger among the needy</p>
-  </div>
+ <div class="container-fluid footer p-5 mt-4" id="contact-us">
+    <div class="d-flex justify-content-center">
+        <a href="https://developers.google.com/profile/u/TheOnlySoham/dashboard"><img src="google_developer.png" class="google_developer"></a>
+        <a class="fa fa-linkedin-square linkedin" href="https://www.linkedin.com/in/soham-thodge-515676229/" style="font-size:36px;color:white"></a>
+        <a href="https://github.com/kronos2003"><img src="github-mark-white.png" class="github"></a>
+    </div>
+    <p class="text-center">&copy; Developed and designed by Soham Thodge</p>
+    <p class="Endline text-center">Made for achieving no poverty and hunger among the needy</p>
+</div>
   <!--Footer ends-->
 </body>
 </html>
